css/main.css
/* ... */
@media (min-width: 1366px) {
    .our-process .bullet-2 {
        left: 39.5%;
    }

    .our-process .bullet-3 {
        left: 50%;
    }

    .our-process .bullet-4 {
        left: 54%;
    }

    .our-process .end-artwork {
        width: auto;
        height: 159px;
    }

    .our-process .step-5 {
        left: 13.57%;
    }

    .cta h2 {
        font-size: 36px;
    }
}

@media (max-width: 1400px) {
    .artwork-2-2 {
        display: none;
    }
}

@media (min-width: 1400px) {
    header .banner img.artwork-1 {
        top: 215px;
        height: 469px;
        width: 1053px;
        left: 26.11%;
    }

    header .banner img.artwork-3 {
        top: 279px;
        height: 372px;
        width: 1020px;
        margin: 0;
        left: 26.94%;
    }

    .artwork-2-2 {
        display: block;
        top: 232px;
        height: 561px;
        width: 941px;
        position: absolute;
        left: 33.19%;
        z-index: 9;
    }

    .artwork-2-1 {
        display: none;
    }

    .top-menu .navbar li a {
        font-size: 14px;
    }

    .top-menu .navbar {
        width: 50%;
    }

    .our-process .bullet {
        height: 50px;
        width: 50px;
    }

    .our-process .bullet-2 {
        left: 39.5%;
    }

    .our-process .bullet-3 {
        left: 48%;
    }

    .our-process .bullet-4 {
        left: 55%;
    }
}

@media screen and (min-width: 576px) and (max-width: 768px) {
    .our-team .row .member {
        width: 40%;
        margin: 5%;
        float: left;
    }
}

@media (max-width: 576px) {

    header .banner input,
    header .banner button {
        border-radius: 20px;
        margin-left: 0;
        margin-bottom: 16px;
        width: 50%;
        display: block;
    }

    header .banner button,
    header .banner input {
        width: 100%;
        display: block;
    }

    /* Start our mission & our story | About us */
    .our-mission p, .our-story p {
        font-size: 16px;
        line-height: 26px;
    }
    .our-mission h2, .our-story h2 {
        font-size: 28px;
        line-height: 38px;
    }
    /* End Our Story | About us */

    /* Start Our history | About us */
    .our-history h2 {
        padding-left: 20px;
        font-size: 28px;
    }
    .our-history .timeline {
        left: 20px;
    }
    .our-history .timeline .vertical-line {
        width: 3px;
    }
    .our-history .timeline .bullet {
        border: 3px solid #4a4a4a;
        width: 24px;
        height: 24px;
    }
    .our-history .timeline .arrow-down {
        border-left: 8px solid transparent;
        border-right: 8px solid transparent;
        border-top: 8px solid #f15a29;
    }
    .our-history .step .step-date {
        font-size: 20px;
        font-weight: 600;
    }
    .our-history .step .step-description {
        font-size: 16px;
    }
    /* End Our history | About us */

    /* Start Our team | About us */
    .our-team h2 {
        font-size: 28px;
        line-height: 38px;
    }
    .our-team .member .member-name {
        font-size: 20px;
    }
    .our-team .member .member-position {
        font-size: 16px;
    }
    .our-team .row .member {
        width: fit-content;
        margin-left: auto;
        margin-right: auto;
        float: none;
    }

    /* End Our team | About us */

    /* Start contact us | About us */
    .contact-us {
        padding: 20px;
    }
    .contact-us h2 {
        font-size: 28px;
        line-height: 38px;
        margin-bottom: 0;
    }
    .contact-us p {
        font-size: 16px;
        line-height: 26px;;
    }
    .contact-us iframe {
        margin-top: 20px;
    }
    .contact-us .map {
        top: 0;
    }
    /* End contact us | About us */
}

/* @media screen and (min-width: 768px) and (max-width: 1048px) {
    header {
        overflow: hidden;
    }
} */
@media screen and (min-width: 768px) and (max-width: 1024px) {
    .our-process .start-artwork {
        width: 203px;
    }

    .our-process .end-artwork {
        width: 159px;
    }

    .our-process .timeline-path-sm {
        left: 75px;
    }

    .our-process .bullet {
        left: 58px;
    }

    .container {
        padding-left: 13.6%;
        padding-right: 13.6%;
    }

    .our-process .container {
        padding-left: 26%;
    }

    .our-process h2:nth-of-type(1) {
        width: auto
    }

    .our-process .title p {
        width: auto
    }

    /* Start Our mission | About us page */
    .our-mission p {
        max-width: 528px;
    }

    /* End Our mission | About us page */
    /* Start Our story | About us page */
    .our-story p {
        max-width: 620px;
    }

    /* End Our story | About us page */
}

@media screen and (min-width: 1284px) and (max-width: 1399px) {
    header {
        overflow: hidden;
    }

    .our-process .end-artwork {
        width: auto;
        height: 170px;
    }

    .our-process .step-5 {
        left: 13%;
    }
}

@media (max-width: 767.99px) {
    .our-process .start-artwork {
        width: 140px;
    }

    .our-process .artwork-1,
    .our-process .artwork-2 {
        left: 20px;
    }

    .our-process .end-artwork {
        width: 112px;
    }

    .our-process .container {
        padding-left: 26%;
    }

    .our-process .timeline-path-sm {
        top: 400px;
        left: 65px;
    }

    .our-process .bullet {
        left: 49px;
    }

    .how-it-works h2 {
        font-size: 32px;
    }

    .how-it-works p {
        font-size: 16px;
    }

    .testimonials p {
        font-size: 16px;
        line-height: 26px;
    }

    .testimonials .customer-name {
        font-size: 14px;
        line-height: 24px;
    }

    .cta h2 {
        font-size: 24px;
        line-height: 34px;
    }

    .cta button {
        height: 40px;
        width: 120px;
        border-radius: 20px;
        font-size: 14px;
    }
}
/* ... */

